--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "handlebars": "^4.0.5",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "fingerprintjs2": "^1.5.1"
   }
 }
