--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
             "cordova-plugin-file": {},
             "cordova-plugin-console": {},
             "cordova-plugin-file-transfer": {},
-            "cordova-plugin-fullscreen": {}
+            "cordova-plugin-fullscreen": {},
+            "cordova-plugin-ios-longpress-fix": {},
+            "cordova-plugin-keyboard": {},
+            "onesignal-cordova-plugin": {}
         }
     },
     "dependencies": {
@@ -22,6 +25,9 @@
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-file-transfer": "^1.6.3",
         "cordova-plugin-fullscreen": "^1.1.0",
-        "cordova-plugin-whitelist": "1"
+        "cordova-plugin-ios-longpress-fix": "^1.1.0",
+        "cordova-plugin-keyboard": "^1.1.5",
+        "cordova-plugin-whitelist": "1",
+        "onesignal-cordova-plugin": "^2.1.2"
     }
 }
