--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
             "cordova-plugin-fullscreen": {},
             "cordova-plugin-ios-longpress-fix": {},
             "cordova-plugin-keyboard": {},
-            "onesignal-cordova-plugin": {}
+            "onesignal-cordova-plugin": {},
+            "cordova-plugin-x-toast": {}
         }
     },
     "dependencies": {
@@ -28,6 +29,7 @@
         "cordova-plugin-ios-longpress-fix": "^1.1.0",
         "cordova-plugin-keyboard": "^1.1.5",
         "cordova-plugin-whitelist": "1",
-        "onesignal-cordova-plugin": "^2.1.2"
+        "onesignal-cordova-plugin": "^2.1.2",
+        "cordova-plugin-x-toast": "~2.6.0"
     }
 }
