--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "PickWin",
+  "name": "pickwin",
   "homepage": "http://www.pickwin.net",
   "authors": [
     "John Falcon <john@tallerdecodigo.com>"
