--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "handlebars": "^4.0.5",
     "moment": "^2.18.1",
-    "fingerprintjs2": "^1.5.1"
+    "fingerprintjs2": "^1.5.1",
+    "thenby": "^1.1.3"
   }
 }
