--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
             "cordova-plugin-facebook4": {
                 "APP_ID": "973176056074364",
                 "APP_NAME": "Pickwin"
-            }
+            },
+            "cordova-plugin-dialogs": {}
         }
     },
     "dependencies": {
@@ -31,6 +32,7 @@
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "~1.0.5",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-dialogs": "^1.3.3",
         "cordova-plugin-facebook4": "^1.9.1",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-file-transfer": "^1.6.3",
