--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "handlebars": "^4.0.5",
     "moment": "^2.18.1",
     "fingerprintjs2": "^1.5.1",
-    "thenby": "^1.1.3"
+    "thenby": "^1.1.3",
+    "countdownjs": "^2.6.0"
   }
 }
