--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,6 @@
     "moment": "^2.18.1",
     "fingerprintjs2": "^1.5.1",
     "thenby": "^1.1.3",
-    "countdownjs": "^2.6.0",
-    "moment-countdown": "^0.0.3"
+    "jquery.countdown": "^2.2.0"
   }
 }
