--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
             "cordova-plugin-keyboard": {},
             "onesignal-cordova-plugin": {},
             "cordova-plugin-x-toast": {},
-            "cordova-plugin-facebook4": {
-                "APP_ID": "973176056074364",
-                "APP_NAME": "Pickwin"
-            },
             "cordova-plugin-dialogs": {},
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-browsersync": {},
-            "cordova-plugin-code-push": {}
+            "cordova-plugin-code-push": {},
+            "cordova-plugin-facebook4": {
+                "APP_ID": "973176056074364",
+                "APP_NAME": "Pickwin"
+            }
         }
     },
     "dependencies": {
