Props showing ok

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "cordova": {
         "platforms": [
             "android",
-            "browser"
+            "browser",
+            "ios"
         ],
         "plugins": {
             "cordova-plugin-whitelist": {},
