--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "moment": "^2.18.1",
     "fingerprintjs2": "^1.5.1",
     "thenby": "^1.1.3",
-    "jquery.countdown": "^2.2.0"
+    "jquery.countdown": "^2.2.0",
+    "velocity": "^1.5.0"
   }
 }
