--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "fingerprintjs2": "^1.5.1",
     "thenby": "^1.1.3",
     "jquery.countdown": "^2.2.0",
-    "velocity": "^1.5.0"
+    "velocity": "^1.5.0",
+    "jquery-serialize-object": "^2.5.0"
   }
 }
